--- a/inventurprojekt/templates/base.html
+++ b/inventurprojekt/templates/base.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container my-4">
-        <h1 class="mb-4">Inventar</h1>
+    <nav class="navbar navbar-light bg-light mb-4">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1">Inventar</span>
+            <a class="btn btn-outline-secondary" href="{% url 'logout' %}">Logout</a>
+        </div>
+    </nav>
+    <div class="container mb-4">
         <table class="table" id="items-table">
             <thead>
                 <tr>
