--- a/inventurprojekt/templates/orders.html
+++ b/inventurprojekt/templates/orders.html
@@ -1,6 +1,30 @@
 {% extends 'base.html' %}
 {% block title %}Aufträge{% endblock %}
 {% block content %}
-<h1>Aufträge</h1>
-<p>Hier könnten Ihre Aufträge stehen.</p>
+<h1 class="mb-3">Aufträge</h1>
+<a href="{% url 'order-create' %}" class="btn btn-primary mb-3">Auftrag hinzufügen</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Beschreibung</th>
+            <th>Produkt</th>
+            <th>Frist</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for order in object_list %}
+        <tr>
+            <td>{{ order.name }}</td>
+            <td>{{ order.description }}</td>
+            <td>{{ order.product.name }}</td>
+            <td>{{ order.due_date }}</td>
+        </tr>
+        {% empty %}
+        <tr>
+            <td colspan="4">Keine Aufträge vorhanden.</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
