--- a/inventurprojekt/templates/calendar.html
+++ b/inventurprojekt/templates/calendar.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Kalender{% endblock %}
 {% block content %}
-<h1>Kalender</h1>
-<p>Kalender-Übersicht.</p>
+<h1 class="mb-4">Kalender</h1>
+<div id="calendar"></div>
+{% endblock %}
+{% block scripts %}
+<script src="/static/js/calendar.js"></script>
 {% endblock %}
