--- a/inventurprojekt/templates/products.html
+++ b/inventurprojekt/templates/products.html
@@ -1,6 +1,34 @@
 {% extends 'base.html' %}
 {% block title %}Produkte{% endblock %}
 {% block content %}
-<h1>Produkte</h1>
-<p>Liste der Produkte.</p>
+<h1 class="mb-3">Produkte</h1>
+<a href="{% url 'product-create' %}" class="btn btn-primary mb-3">Produkt hinzufügen</a>
+<table class="table">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Link</th>
+            <th>Apple Produkt</th>
+            <th>Foto</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for product in object_list %}
+        <tr>
+            <td>{{ product.name }}</td>
+            <td><a href="{{ product.purchase_link }}">{{ product.purchase_link }}</a></td>
+            <td>{% if product.is_apple %}Ja{% else %}Nein{% endif %}</td>
+            <td>
+                {% if product.photo %}
+                    <img src="{{ product.photo.url }}" alt="{{ product.name }}" width="50">
+                {% else %}
+                    -
+                {% endif %}
+            </td>
+        </tr>
+        {% empty %}
+        <tr><td colspan="4">Keine Produkte vorhanden.</td></tr>
+        {% endfor %}
+    </tbody>
+</table>
 {% endblock %}
